--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
@@ -23,7 +23,7 @@
       <menus>
         <Menu mnemonicParsing="false" text="File">
           <items>
-            <MenuItem mnemonicParsing="false" text="Input File...">
+            <MenuItem mnemonicParsing="false" onAction="#handleInputFileEvent" text="Input File...">
                      <accelerator>
                         <KeyCodeCombination alt="DOWN" code="I" control="UP" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
