--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
@@ -9,5 +9,11 @@
  * a different theme besides Modena (which is the default, as of Java 9, so you might not know you're using it)
  * that does not make definitions based on "-fx-base", then it will probably have no effect.
  */
- 
+
+/* I really like this green.  I should probably comment it out when I deliver this.  :)
 #goBtn { -fx-base: hsb(90, 80%, 100%); }
+*/
+
+/*
+.root { -fx-base: #111811; }
+*/
