--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
@@ -75,15 +75,12 @@
             <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
         </rowConstraints>
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
             <Label text="Input Files" />
-            <ListView fx:id="inputFilenamesListView" minHeight="20.0" minWidth="20.0" GridPane.rowIndex="1" />
+            <ListView fx:id="inputFilesListView" minHeight="20.0" minWidth="20.0" GridPane.rowIndex="1"/>
             <Label text="Output File" GridPane.rowIndex="2" />
             <TextField fx:id="outputFilename" GridPane.rowIndex="3" />
             <BorderPane minHeight="10.0" prefWidth="200.0" GridPane.rowIndex="4">
