--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
@@ -15,8 +15,10 @@
 #goBtn { -fx-base: hsb(90, 80%, 100%); }
 
 /* This affects everything the same as using the "*" selector (on Windows, at least), so this is probably more better.
+ * Note that the default button's visual style takes precedence, so if you set a default button and you don't
+ * want its style to dominate, you'll have to explicitly set its -fx-base here, too. 
 .root { -fx-base: #131716; }
-*/
+ */
 
 /*
 * { -fx-base: #131716; }
