--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/MainUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
@@ -9,12 +10,9 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.input.KeyCodeCombination?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
@@ -85,25 +83,12 @@
             <ListView fx:id="inputFilesListView" minHeight="20.0" minWidth="20.0" GridPane.rowIndex="1" />
             <Label text="Output File" GridPane.rowIndex="2" />
             <TextField fx:id="outputFile" editable="false" focusTraversable="false" GridPane.rowIndex="3" />
-            <BorderPane minHeight="10.0" prefWidth="200.0" GridPane.rowIndex="4">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <GridPane.margin>
-                  <Insets />
-               </GridPane.margin>
-               <center>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button id="goBtn" fx:id="goBtn" defaultButton="true" onAction="#handleGoClick" text="_Go!">
-                           <tooltip>
-                              <Tooltip text="A normal button with a custom color." wrapText="true" />
-                           </tooltip>
-                        </Button>
-                     </children>
-                  </HBox>
-               </center>
-            </BorderPane>
+            <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.rowIndex="4">
+              <buttons>
+                  <Button id="goBtn" fx:id="goBtn" defaultButton="true" onAction="#handleGoClick" text="_Go!" />
+                  <Button onAction="#handleConfigEvent" text="_Config" />
+              </buttons>
+            </ButtonBar>
          </children>
       </GridPane>
   </children>
