--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/ConfigUI.fxml
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/ConfigUI.fxml
@@ -3,11 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" 
-		fx:controller="church.universityumc.excelconverter.ui.ConfigController">
+<BorderPane xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="church.universityumc.excelconverter.ui.ConfigController">
    <center>
       <TreeView fx:id="configTreeView" minHeight="50.0" minWidth="50.0" BorderPane.alignment="CENTER" />
    </center>
@@ -15,13 +17,38 @@
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
           <Button cancelButton="true" mnemonicParsing="false" onAction="#close" text="Cancel" />
-            <Button defaultButton="true" mnemonicParsing="false" text="Ok" />
-            <Button text="_Load" />
-            <Button text="_Save" />
+            <Button defaultButton="true" mnemonicParsing="false" onAction="#useConfig" text="Ok" />
         </buttons>
       </ButtonBar>
    </bottom>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+               <items>
+                  <Menu mnemonicParsing="false" text="New">
+                    <items>
+                      <MenuItem mnemonicParsing="false" onAction="#insertNewActivity" text="Activity" />
+                    </items>
+                  </Menu>
+                  <MenuItem mnemonicParsing="false" onAction="#loadConfig" text="Open" />
+                  <MenuItem mnemonicParsing="false" onAction="#saveConfig" text="Save" />
+               </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" onAction="#deleteSelectedItem" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Help" />
+               </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
 </BorderPane>
