--- a/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
+++ b/ExcelConverter/src/main/resources/church/universityumc/excelconverter/ui/application.css
@@ -14,10 +14,12 @@
 */
 #goBtn { -fx-base: hsb(90, 80%, 100%); }
 
+/*
 #configTreeView {
     -fx-base: hsb(45, 100%, 100%);
     -fx-background-color: red;
 }
+*/
 
 /* This affects everything the same as using the "*" selector (on Windows, at least), so this is probably more better.
  * Note that the default button's visual style takes precedence, so if you set a default button and you don't
